tests/cases/fail/non_list_for_iterable.p4
def main() -> None:
    for x in 1:
        print(x)
